# filename-change

./: .gitignore  Cargo.toml  README.md  agents.md
src/: controller.rs  events.rs  main.rs  preview.rs  rename.rs  state.rs  ui.rs  widgets.rs
